# electromag-with-cuda

./: CMakeLists.txt  CompilationUnderLinux.md  ProjectHome.md  README.txt
ElectroMag/: CMakeLists.txt  Config.mk  ElectroMag.sln  Makefile  (+2 more)
ElectroMag/Graphics/: CMakeLists.txt  Graphics.vcproj  Makefile  Makefile-Debug.mk
ElectroMag/Graphics/src/: FieldRender class.h  FieldRender.cpp  FieldRender.h  FieldRender_Interface.cpp  FrontendGUI.cpp
GPGPU_Segment/: CMakeLists.txt
GPGPU_Segment/src/: Abstract Functor.h  Abstract_Functor.cpp  CL Electrostatics.hpp  CL Manager.h  CL_Electrostatics.cpp  CL_Electrostatics.hpp  CL_Manager.cpp  CL_Manager.hpp  CUDA Interop.h  CUDA_Electrostatics.cpp  CUDA_Electrostatics.h  CUDA_Electrostatics.hpp  Config.h  ElectrostaticFunctor.hpp  Electrostatics Housekeeping.h  Electrostatics MT kernel.cuh  Electrostatics kernel.cuh  Electrostatics.cl.c  Electrostatics.cpp  OpenCL_Dyn_Load.c  OpenCL_Dyn_Load.h
GPGPU_Segment/src/CL/: cl.h
trunk/: CMakeLists.txt  README.txt
trunk/ElectroMag/: CMakeLists.txt  Config.mk  ElectroMag.sln  Makefile  Makefile-GNU.mk  Makefile-Intel.mk  README.txt
trunk/ElectroMag/CMakeModules/: FindGLEW.cmake
trunk/ElectroMag/ElectroMag/: CMakeLists.txt  Config.mk  Dependencies.txt  ElectroMag.icproj  ElectroMag.idc  ElectroMag.vcproj  Makefile  Makefile.mk  ReadMe.txt
trunk/ElectroMag/ElectroMag/lib/: freeglut.lib  freeglut32.lib
trunk/ElectroMag/ElectroMag/src/: CPU Implement.h  CPU_Implement.cpp  Data Structures.h  ElectroMag.cpp  Electrodynamics.h  Electromag utils.h  Graphics_dynlink.cpp  Particle_System.cpp  stdafx.cpp
trunk/ElectroMag/ElectroMag/src/CPUID/: CPUID.cpp  CpuID.h
trunk/ElectroMag/ElectroMag/src/Graphics/: Camera.h  FieldRender.cpp  FieldRender.h  FrontendGUI.cpp  FrontendGUI.h  MainGUI.h  Renderer.cpp  Renderer.h
trunk/ElectroMag/ElectroMag/src/Graphics/GL/: freeglut_dynlink.c  glutExtra.h  glxew.h
trunk/ElectroMag/ElectroMag/src/X-Compat/: Memman.h  Threading.h
trunk/ElectroMag/GPGPU Segment/: GPGPU Segment.icproj  GPGPU Segment.vcproj  Makefile  Makefile.mk
trunk/ElectroMag/GPGPU Segment/src/: Electrostatics Housekeeping.h  Electrostatics Kernel Launch.h  Electrostatics MT kernel.cuh  Electrostatics kernel.cuh  Electrostatics.cpp  Electrostatics.cu  Electrostatics_Multistep.cu  GPU manager.h  GPU_manager.cpp  OpenCL_Dyn_Load.h
trunk/ElectroMag/GPGPU_Segment/: CMakeLists.txt  GPGPU Segment.vcproj  Makefile
trunk/ElectroMag/GPGPU_Segment/src/: Abstract_Functor.cpp  CL Manager.h  CL_Manager.cpp  CUDA Interop.h  CUDA Manager.h  CUDA manager.h  CUDA_Electrostatics.cpp  CUDA_Electrostatics.h  CUDA_manager.cpp  Config.h  Electrostatics Housekeeping.h  Electrostatics.cpp  Electrostatics_sm13.cu  GPU_manager.cpp  OpenCL_Dyn_Load.h  cuda_drvapi_dynlink.c  cuda_drvapi_dynlink.h
trunk/ElectroMag/GPGPU_Segment/src/CUDA/: vector_types.h
trunk/ElectroMag/Graphics/: Graphics.icproj  Makefile
trunk/ElectroMag/Graphics/src/: Camera.h  FieldRender class.h  FieldRender.cpp  FieldRender_Interface.cpp  FrontendGUI.h  Renderer Interface.h  Renderer.h  Renderer_Interface.cpp
trunk/ElectroMag/common/: Electrostatics.ptx
trunk/ElectroMag/common/lib/: Electrostatics.ptx  GPL.txt  License.txt  freeglut.lib
trunk/ElectroMag/common/src/: CUDA Definitions.h  Data Structures.h  Electrostatics.h  Magnetics.h  Vector.h
trunk/ElectroMag/common/src/X-Compat/: Memman.h  Threading.h
trunk/ElectroMag/include/: Electrodynamics.h  Electrostatics.h  Magnetics.h
trunk/ElectroMag/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml
trunk/ElectroMag/src/: CPU Implement.h  CPU_Implement.cpp  ElectroMag.cpp  Electromag utils.h  Graphics_dynlink.cpp  Particle_System.cpp  SSE math.h  stdafx.cpp  stdafx.h
trunk/ElectroMag/src/CPUID/: CpuID.h
trunk/GPGPU_Segment/: CMakeLists.txt
trunk/GPGPU_Segment/src/: Abstract Functor.h  Abstract_Functor.cpp  CL Electrostatics.hpp  CL Manager.h  CL_Electrostatics.cpp  CL_Electrostatics.hpp  CL_Manager.cpp  CL_Manager.hpp  CUDA Interop.h  CUDA_Electrostatics.cpp  CUDA_Electrostatics.h  CUDA_manager.cpp  ElectrostaticFunctor.hpp  Electrostatics Housekeeping.h  Electrostatics Kernel Launch.h  Electrostatics kernel.cuh  Electrostatics.cl.c  Electrostatics.cpp  Electrostatics_Multistep.cu  Electrostatics_sm13.cu  OpenCL_Dyn_Load.c  OpenCL_Dyn_Load.h
trunk/Graphics/: CMakeLists.txt
trunk/Graphics/src/: Camera.h  FieldRender class.h  FieldRender.cpp  FieldRender.h  FieldRender_Interface.cpp  FrontendGUI.cpp  FrontendGUI.h  Renderer Interface.h  Renderer.h  Renderer_Interface.cpp
trunk/include/: CUDA Definitions.h  Data Structures.h  Electrodynamics.h  Electrostatics.h  Magnetics.h  Newton FEMA.h  Particle Dynamics.h  SOA_utils.hpp  Vector.h
trunk/include/X-Compat/: HPC Timing.h  Threading.h
(+120 files in other folders)
